--- a/module/Application/language/es_ES.po
+++ b/module/Application/language/es_ES.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: ZendSkeletonApplication\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-06 19:07+0100\n"
-"PO-Revision-Date: 2014-06-26 19:43+0100\n"
-"Last-Translator: Clever Flores <cleverflores@gmail.com>\n"
+"PO-Revision-Date: 2014-06-26 20:31-0500\n"
+"Last-Translator: ramses <ramses.cr02@gmail.com>\n"
 "Language-Team: ZF Contributors <zf-devteam@zend.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
